# sparql_fastapi

./: .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml
src/sparql_api/: adapter.py  main.py  model_constructors.py
src/sparql_api/models/: __init__.py  document_model.py
src/sparql_api/sparql/: __init__.py  corpus_document_by_id.rq  corpus_documents.rq  corpus_documents_by_title.rq
src/sparql_api/utils/: utils.py
